--- a/priv/static/app.css
+++ b/priv/static/app.css
@@ -93,3 +93,10 @@ body {
 	margin: 4px 4px;
 	border-radius: 6px;
 }
+
+.competition-occupancy {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: start;
+}
